k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-cloud-compiler
  labels:
    app: java-cloud-compiler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-cloud-compiler
  template:
    metadata:
      labels:
        app: java-cloud-compiler
    spec:
      containers:
        - name: app
          image: demo:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
