k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-cloud-compiler
spec:
  type: NodePort
  selector:
    app: java-cloud-compiler
  ports:
    - port: 80
      targetPort: 8080
